--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Vue plugin for using Microsoft Authentication Library (MSAL)",
   "main": "dist/plugin.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -37,9 +38,10 @@
   "dependencies": {
     "axios": "^0.19.0",
     "lodash": "^4.17.15",
-    "msal": "^1.3.2"
+    "msal": "^1.4.2"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.138"
+    "@types/lodash": "^4.14.138",
+    "typescript": "^4.2.4"
   }
 }
