--- a/package.json
+++ b/package.json
@@ -21,17 +21,12 @@
     "url": "https://github.com/arunravilla/vue-msal/issues"
   },
   "contributors": [
-    {
-      "name": "Marios Vertopoulos"
-    }
+    "Marios Vertopoulos"
   ],
   "eslintIgnore": [
     "lib/*.*"
   ],
   "homepage": "https://github.com/arunravilla/vue-msal#readme",
-  "publishConfig": {
-    "registry":"https://npm.pkg.github.com/"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/arunravilla/vue-msal.git"
@@ -49,5 +44,8 @@
     "@types/lodash": "^4.14.138",
     "@types/node": "^14.14.41",
     "typescript": "^4.2.4"
+  },
+  "directories": {
+    "lib": "lib"
   }
 }
