--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "vue-msal-v2",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Vue plugin for using Microsoft Authentication Library (MSAL)",
   "main": "dist/plugin.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublishOnly": "npm run compile",
+    "compile": "npm run clean && tsc -p .",
+    "watch": "tsc -w -p .",
+    "clean": "rm -rf dist"
   },
   "keywords": [
     "vue",
@@ -29,21 +33,15 @@
     "type": "git",
     "url": "git+https://github.com/arunravilla/vue-msal.git"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "axios": "^0.19.0",
     "lodash": "^4.17.15",
     "msal": "^1.4.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.16",
-    "@babel/core": "^7.13.16",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/preset-typescript": "^7.13.0",
-    "@types/lodash": "^4.14.138",
-    "@types/node": "^14.14.41",
-    "typescript": "^4.2.4"
-  },
-  "directories": {
-    "lib": "lib"
+    "@types/lodash": "^4.14.138"
   }
 }
